@@ -6,22 +6,22 @@ import Minari.cheongForDo.domain.member.entity.MemberEntity;
 import Minari.cheongForDo.domain.member.presentation.dto.MemberLoginDTO;
 import Minari.cheongForDo.domain.member.repository.MemberRepository;
 import Minari.cheongForDo.domain.member.presentation.dto.MemberRegisterDTO;
-import Minari.cheongForDo.global.auth.JwtInfo;
 import Minari.cheongForDo.global.auth.JwtUtils;
-import Minari.cheongForDo.global.exception.CustomException;
 import Minari.cheongForDo.global.exception.CustomErrorCode;
+import Minari.cheongForDo.global.exception.CustomException;
 import Minari.cheongForDo.global.response.BaseResponse;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
-@RequiredArgsConstructor
 @Transactional
+@RequiredArgsConstructor
 public class MemberService {
+
     private final MemberRepository memberRepository;
     private final BCryptPasswordEncoder bCryptPasswordEncoder;
     private final JwtUtils jwtUtils;
@@ -34,7 +34,9 @@ public class MemberService {
         memberRepository.save(
                 MemberEntity.builder()
                         .id(dto.getId())
-                        .password(bCryptPasswordEncoder.encode(dto.getPassword()))
+                        .password(
+                                bCryptPasswordEncoder.encode(dto.getPassword())
+                        )
                         .name(dto.getName())
                         .email(dto.getEmail())
                         .authority(MemberAccountType.ROLE_USER)
@@ -57,13 +59,14 @@ public class MemberService {
             throw new CustomException(CustomErrorCode.MEMBER_NOT_CORRECT);
         }
 
-        JwtInfo jwtInfo = jwtUtils.generateToken(member);
-
         return BaseResponse.of(
                 true,
                 "OK",
                 "로그인 성공",
-                Collections.singletonList(jwtInfo)
+                List.of(
+                        jwtUtils.generateToken(member)
+                )
         );
     }
+
 }
